Add berlin map and meta data

--- a/meshNet/heatmap_visualization.ipynb
+++ b/meshNet/heatmap_visualization.ipynb
@@ -63,7 +63,7 @@
     "\n",
     "results_dir = os.path.join(project_base_dir, 'meshNet', 'results')\n",
     "\n",
-    "map_data_dir = 'visualization_map'\n",
+    "map_data_dir = './'\n",
     "map_file_path = os.path.join(map_data_dir, 'gSamplesMap.png')\n",
     "img_full_map_orig = cv2.imread(map_file_path)\n",
     "orth_data = OrthoData(map_data_dir)\n",
